include/node/block.h

/**
 * @brief Opaque handle to a timeline block (olive::Block).
 *
 * Covers the whole Block family: ClipBlock, GapBlock and the concrete
 * TransitionBlock subclasses. The handle IS the C++ object pointer; no
 * wrapper is allocated. Concrete instances are created through the
 * oaknode_block_*_create() factories below; callers never touch C++
 * subclasses directly.
 */
typedef struct OakNodeBlock OakNodeBlock;
/**
 * @brief Opaque handle to a track (olive::Track), see node/track.h.
 *
 * Re-declared here so block.h is self-contained; the typedef is identical.
 */
typedef struct OakNodeTrack OakNodeTrack;
/**
 * @brief Opaque handle to a node (olive::Node), see node/node.h.
 *
 * Re-declared here so block.h is self-contained; the typedef is identical.
 */
typedef struct OakNodeNode OakNodeNode;
/**
 * @brief Create a ClipBlock.
 *
 * The caller owns the block until it is placed on a track that belongs to
 * a project; a block that was never placed must be released with
 * oaknode_block_free().
 *
 * @return Block handle, or NULL on allocation failure.
 */
OakNodeBlock *oaknode_block_clip_create(void);
/**
 * @brief Create a GapBlock. Ownership as oaknode_block_clip_create().
 *
 * @return Block handle, or NULL on allocation failure.
 */
OakNodeBlock *oaknode_block_gap_create(void);
/**
 * @brief Concrete kind of a block (dynamic_cast query).
 */
int oaknode_block_get_kind(OakNodeBlock *block, int *out_kind);
/**
 * @brief Borrowed cast from a block handle to its node handle.
 *
 * Every Block is a Node; the result must not be freed. NULL for NULL.
 */
OakNodeNode *oaknode_block_as_node(OakNodeBlock *block);
/**
 * @brief Borrowed cast from a node handle to a block handle.
 *
 * Returns NULL if the node is not a Block (or for NULL).
 */
OakNodeBlock *oaknode_block_from_node(OakNodeNode *node);
/**
 * @brief Rational getters/setters use numerator/denominator out pairs.
 *
 * @return OAKNODE_OK or OAKNODE_E_INVALID.
 */
int oaknode_block_get_in(OakNodeBlock *block, int *numerator, int *denominator);
int oaknode_block_get_out(OakNodeBlock *block, int *numerator, int *denominator);
int oaknode_block_get_length(OakNodeBlock *block, int *numerator,
							 int *denominator);
/**
 * @brief Set the block length, keeping the media out/in point anchored
 * (olive::Block::set_length_and_media_out / _media_in).
 *
 * @return OAKNODE_OK or OAKNODE_E_INVALID.
 */
int oaknode_block_set_length_and_media_out(OakNodeBlock *block, int numerator,
										   int denominator);
int oaknode_block_set_length_and_media_in(OakNodeBlock *block, int numerator,
										  int denominator);
/**
 * @brief Enabled flag (olive::Block::is_enabled/set_enabled).
 *
 * @return OAKNODE_OK or OAKNODE_E_INVALID.
 */
int oaknode_block_get_enabled(OakNodeBlock *block, int *enabled);
int oaknode_block_set_enabled(OakNodeBlock *block, int enabled);
/**
 * @brief Adjacency accessors. `out` receives a borrowed handle (NULL when
 * there is no neighbour / the block is not on a track).
 *
 * @return OAKNODE_OK or OAKNODE_E_INVALID.
 */
int oaknode_block_get_previous(OakNodeBlock *block, OakNodeBlock **out);
int oaknode_block_get_next(OakNodeBlock *block, OakNodeBlock **out);
int oaknode_block_get_track(OakNodeBlock *block, OakNodeTrack **out);
/**
 * @brief Link two blocks (olive::Node::link/unlink/are_linked).
 *
 * Linked blocks move together in timeline edits.
 *
 * @return OAKNODE_OK, OAKNODE_E_INVALID or OAKNODE_E_FAILED (already
 * linked / not linked).
 */
int oaknode_block_link(OakNodeBlock *a, OakNodeBlock *b);
int oaknode_block_unlink(OakNodeBlock *a, OakNodeBlock *b);
int oaknode_block_are_linked(OakNodeBlock *a, OakNodeBlock *b, int *linked);
/* ---------------------------------------------------------------- Clip */

/**
 * @brief Media in/out accessors (olive::ClipBlock). Non-clip blocks return
 * OAKNODE_E_INVALID.
 */
int oaknode_clip_get_media_in(OakNodeBlock *clip, int *numerator,
							  int *denominator);
int oaknode_clip_set_media_in(OakNodeBlock *clip, int numerator,
							  int denominator);
/**
 * @brief Forward cache passthroughs from another clip
 * (ClipBlock::add_cache_passthrough_from()). Used after splitting a
 * clip so the new part shares the render caches.
 */
int oaknode_clip_add_cache_passthrough_from(OakNodeBlock *clip,
											OakNodeBlock *other);