include/node/node.h

/**
 * @brief Opaque node handle (olive::Node).
 */
typedef struct OakNodeNode OakNodeNode;
/* Re-declared here so node.h is self-contained; see node/project.h. */
typedef struct OakNodeProject OakNodeProject;
/**
 * @brief Opaque borrowed handles to the timeline data owned by viewer
 * nodes (TimelineMarkerList / TimelineWorkArea in oaktimeline).
 * oaktimeline reinterprets these into its own handle types.
 */
typedef struct OakNodeMarkerList OakNodeMarkerList;
typedef struct OakNodeWorkArea OakNodeWorkArea;
/* ---- Graph editing -------------------------------------------------------- */

/**
 * @brief Connect `output_node`'s output into `input_node`'s `input_id`
 * directly (live, Node::connect_edge(), element -1).
 *
 * Fails with OAKNODE_E_NOT_FOUND for an unknown input id,
 * OAKNODE_E_INVALID when the input is not connectable, and
 * OAKNODE_E_STATE when the input is already connected or the nodes belong
 * to different graphs.
 */
int oaknode_node_connect(OakNodeNode *output_node, OakNodeNode *input_node,
						 const char *input_id);
/**
 * @brief Remove the edge feeding `input_node`'s `input_id` directly
 * (live, Node::disconnect_edge(), element -1). OAKNODE_E_NOT_FOUND when
 * the input is unknown or not connected.
 */
int oaknode_node_disconnect(OakNodeNode *input_node, const char *input_id);
/**
 * @brief Number of outgoing edges (Node::output_connections()).
 */
int oaknode_node_output_connection_count(const OakNodeNode *node,
										 int *out_count);
/**
 * @brief Copy a node inside its graph (Node::copy_node_in_graph()),
 * recording the reconnect operations in a new MultiUndoCommand.
 *
 * `*out_command` receives an owned undo command handle (free with
 * oakundo_command_free()). The copy is inserted into the graph only when
 * the returned command is redone; treat it as owned (oaknode_node_free())
 * until then. Returns NULL on failure.
 */
OakNodeNode *oaknode_node_copy_in_graph(OakNodeNode *node,
										OakUndoCommand *out_command);
/**
 * @brief Get the project this node belongs to (borrowed). *out may be
 * NULL if the node is orphaned.
 */
int oaknode_node_get_project(const OakNodeNode *node,
							 OakNodeProject **out);
/**
 * @brief Borrowed marker list / work area of a viewer node. *out is NULL
 * when the node is not a viewer (or for NULL input).
 */
int oaknode_node_get_markers(const OakNodeNode *node,
							 OakNodeMarkerList **out);
int oaknode_node_get_work_area(const OakNodeNode *node,
							   OakNodeWorkArea **out);
/**
 * @brief Create a command that removes a node from its graph together
 * with its exclusive dependencies and disconnects its edges
 * (NodeRemoveWithExclusiveDependenciesAndDisconnect).
 *
 * Owned command handle; free with oakundo_command_free(). Returns NULL
 * on failure.
 */
OakUndoCommand oaknode_command_create_remove_node(OakNodeNode *node);